...

            <ImageView
                android:layout_width="37dp"
                android:paddingTop="12dp"
                android:paddingRight="12dp"
                android:layout_height="37dp"
                android:src="@drawable/cogwheel"
                android:clickable="true"
                android:id="@+id/cogwheel"
                android:layout_gravity="right"
                />

            <TextView
...
            android:layout_below="@+id/aboutUnibot"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signOut"
            android:layout_weight="16.75"

            android:layout_below="@+id/aboutUs"
            android:background="@drawable/hover_button"
            android:textColor="#FFFFFF"
            android:text="Sign out" android:textSize="18dp"


            />
        <View android:layout_height="2px"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
...
