<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test_textview_settings"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30dp"
        android:text="Your information"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/gender_picture"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/calculated_grade_settings"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/birthyear_settings"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/courses_havehad"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cources_settings"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/extra_havehad"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/extra_information_settings"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/r2grade_settings"
        />

    <View android:layout_height="2px"
        android:paddingTop="10dp"
        android:layout_width="fill_parent"
        android:background="#000000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff407f"
        android:id="@+id/info"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true"
        android:text="Change user information"/>

    <View android:layout_height="2px"
        android:layout_width="fill_parent"
        android:background="#000000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff407f"
        android:id="@+id/change_password"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true"
        android:text="Change user password"/>
    <View android:layout_height="2px"
        android:layout_width="fill_parent"
        android:background="#000000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff407f"
        android:id="@+id/return_to_settings"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp"
        android:textSize="17dp"
        android:text="RETURN"/>


</LinearLayout>